# sscs-ose-code-a-chip.github.io

./: .gitignore  .gitmodules  FAQ.md  Gemfile  LICENSE  PCA.ipynb  README.md  _config.yml  howtoapply.md  index.md  main_notebook.ipynb  programmable_logic_gates.ipynb
ISSCC23/: README.md
ISSCC24/: README.md
ISSCC25/: README.md
VLSI23/submitted_notebooks/bandgap_sky130_v1/: .gitignore  README.md  environment.yml  ngspice_result.py  pyproject.toml  rawread.py  simulate_tests.py
VLSI23/submitted_notebooks/bandgap_sky130_v1/.devcontainer/: .bashrc  devcontainer.json
VLSI23/submitted_notebooks/bandgap_sky130_v1/bandgap_sky130_v1/: amplifier_v01.sch  amplifier_v01.sym  bandgap_1v_v01.sch  bandgap_1v_v01.sym  bandgap_1v_v01_temp_sweep_sim.sch  bandgap_1v_v01_transient_gauss.sch  bandgap_1v_v01_transient_sim.sch
VLSI23/submitted_notebooks/bandgap_sky130_v1/pyMOSChar/: characterize.py  spice3read.py
VLSI23/submitted_notebooks/bandgap_sky130_v1/tests/dc_op/: test_op_point.py  vdsat.py
VLSI23/submitted_notebooks/bandgap_sky130_v1/tests/tempsweep/: tempsweep.py
VLSI23/submitted_notebooks/bandgap_sky130_v1/viper/: typing.py
VLSI23/submitted_notebooks/bandgap_sky130_v1/viper/testing/: PerformanceTest.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/: flake.nix  notebook.ipynb  pyproject.toml
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/controller_filtered/: config.json
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/controller_variable_step/: config.json
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/inv_dcdl/: config.json
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/nand_dcdl/: config.json
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/phase_detector_syn_ff1/: config.json
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/phase_detector_syn_pfd/: config.json  sky130_wrapper.sv
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/template_sequential/: config.json
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/design/zdb_top/: controller_saturate.sv
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/docs/_ext/: generate_configvar_docs.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/docs/source/: additional_material.md  glossary.md
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/librelane/: __main__.py  container.py  env_info.py  plugins.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/librelane/common/: misc.py  tcl.py  toolbox.py  tpe.py  types.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/librelane/config/: __main__.py  preprocessor.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/librelane/flows/: classic.py  cli.py  misc.py  optimizing.py  sequential.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/librelane/logging/: __init__.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/librelane/state/: __init__.py  design_format.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/librelane/steps/: __init__.py  checker.py  magic.py  misc.py  odb.py  openroad.py  pyosys.py  step.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/nix/: colab-env.nix  create-shell.nix  docker.nix
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/test/common/: test_misc_utils.py  test_tcl.py  test_toolbox.py  test_types.py
VLSI26/submitted_notebooks/DelayLockedLoopExploration/librelane/test/config/: test_config.py  test_pdk_migration.py  test_preprocessor.py  test_yaml_loader.py
VLSI26/submitted_notebooks/NeuroSAR/: .gitignore  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  claim_evidence_matrix.csv  pyproject.toml  requirements.txt  setup.cfg
VLSI26/submitted_notebooks/NeuroSAR/assets/figures/: README.md
VLSI26/submitted_notebooks/NeuroSAR/data/exports/: MODEL_CARD.md  metastability_mc.npz  spice_validation.npz
VLSI26/submitted_notebooks/NeuroSAR/docs/: TECH_REP.md  overview.md  physics_model.md  submission_checklist.md  training_plan.md  video_script.md
VLSI26/submitted_notebooks/NeuroSAR/notebooks/: 00_Project_Overview.ipynb  01_Generate_Dataset.ipynb  02_Train_PINN.ipynb  03_Evaluate_Waveforms.ipynb  04_FoM_Explorer.ipynb  05_Inverse_Design.ipynb  06_NeuroSAR_Interactive_Demo.ipynb  07_SPICE_Validation.ipynb  08_Biomedical_Case_Study.ipynb
VLSI26/submitted_notebooks/NeuroSAR/scripts/: evaluate.sh  package_submission.sh  run_demo.py  setup_env.sh  train.sh  validate_spice.sh
VLSI26/submitted_notebooks/NeuroSAR/src/: __init__.py  animation.py  biomedical_specs.py  config.py  dataset.py  evaluate.py  export_results.py  fom_analysis.py  interactive_ui.py  inverse_design.py  losses.py  physics.py  pinn_model.py  plotting.py  simulate_spice.py  spice_validation.py  train_pinn.py  utils.py
VLSI26/submitted_notebooks/NeuroSAR/tests/: test_dataset.py  test_inference.py  test_losses.py  test_shapes.py  test_spice_validation.py
(+11792 files in other folders)
