[project]
name = "bandgap_1v_v01"
version = "0.1.0"
authors = [
   {name="Curtis Mayberry", email="Curtisma3@gmail.com"},
   {name="Yulin Deng", email=""},
   {name="Thomas Pluck", email=""},
]
readme = "README.md"
license = {file="LICENSE"}
description = "A bandgap circuit in the Skywater SKY130 process"
keywords = ["hardware", "analog"]
requires-python = ">=3.8"
classifiers = [
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Home" = "https://github.com/cascode-labs/bandgapReferenceCircuit"
"Documentation" = "https://github.com/cascode-labs/bandgapReferenceCircuit"
"Source" = "https://github.com/cascode-labs/bandgapReferenceCircuit"

[tools.viper.process]
foundry = "Skywater"
process = "SKY130"
