[metadata]
name = neurosar
version = 0.1.0
description = PINN-Based Metastability-Aware SAR ADC Waveform Engine in Sky130
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.0.0
    numpy>=1.24.0
    pandas>=2.0.0
    plotly>=5.14.0

[options.packages.find]
where = .
include = src*

[tool:pytest]
testpaths = tests
