[tool.poetry]
name = "librelane"
version = "2.4.13"
description = "An infrastructure for implementing chip design flows"
# Technically, maintainer. We cannot use the maintainers field until
# poetry-core>=2.0.0 which requires Python version 3.9+. This field does
# not imply primary authorship for the purposes of copyright.
authors = ["Mohamed Gaber <me@donn.website>"]
readme = "Readme.md"
license = "Apache-2.0"
repository = "https://github.com/librelane/librelane"
documentation = "https://librelane.readthedocs.io"


[tool.poetry.dependencies]
python = ">=3.8.1,<4"
click = ">=8"
cloup = ">=3.0.5,<4"
pyyaml = ">=5,<7"
rich = ">=12,<15"
ciel = ">=2.0.3,<3"
lxml = ">=4.9.0"
deprecated = ">=1.2.10,<2"
lln-libparse = "0.56.*"
psutil = ">=5.9.0"
httpx = ">=0.22.0,<0.29"
klayout = ">=0.29.0,<0.31.0"
rapidfuzz = ">=3.9.0,<4"
yamlcore = "^0.0.2"
semver = "^3.0.2"


[tool.poetry.group.dev.dependencies]
wheel = "*"
black = ">=24.4.0,<25"

flake8 = ">=7"
flake8-pytest-style = "*"

mypy = ">=1.9.0,<1.10.0"
lxml-stubs = "*"
types-urllib3 = "*"
types-typed-ast = "*"
types-six = "*"
types-setuptools = "*"
types-PyYAML = "*"
types-docutils = "*"
types-decorator = "*"
types-commonmark = "*"
types-colorama = "*"
types-Pygments = "*"
types-Deprecated = "*"
types-psutil = "*"

pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pyfakefs = ">=5.2.3,<6"
pillow = ">=10.0.1,<11"


[tool.poetry.scripts]
openlane = "librelane.__main__:cli"
librelane = "librelane.__main__:cli"
"librelane.steps" = "librelane.steps.__main__:cli"
"librelane.config" = "librelane.config.__main__:cli"
"librelane.state" = "librelane.state.__main__:cli"
"librelane.help" = "librelane.help.__main__:cli"
"librelane.env_info" = "librelane:env_info_cli"

[tool.ruff]
# syntax-only check, make sure files are parseable under py38
# $ ruff check .
target-version = "py38"
lint.ignore = ["E", "F"] 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
